--- a/appsettings.json
+++ b/appsettings.json
@@ -7,8 +7,10 @@
   },
   "AllowedHosts": "*",
 
-  "ConnectionStrings": {
-  "DefaultConnection": "Server=localhost;Database=VisaAdminDB;Trusted_Connection=True;"
+"ConnectionStrings": {
+  "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=VisaAdminDB;Trusted_Connection=True;Encrypt=False;"
 }
+
+
 
 }
