--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,19 @@
 
 "ConnectionStrings": {
   "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=VisaAdminDB;Trusted_Connection=True;Encrypt=False;"
+},
+
+"Jwt": {
+  "Key": "ThisIsASecretKeyForJwtDontShare123!",
+  "Issuer": "visa_app",
+  "Audience": "visa_app_users",
+  "ExpiresInMinutes": 60
+},
+
+"UploadSettings": {
+  "Folder": "UploadedFiles"
 }
+
 
 
 
