--- a/visa-app-front/package.json
+++ b/visa-app-front/package.json
@@ -32,8 +32,10 @@
     "@angular/platform-server": "^20.0.0",
     "@angular/router": "^20.0.0",
     "@angular/ssr": "^20.0.5",
+    "chart.js": "^4.2.1",
     "express": "^5.1.0",
     "jwt-decode": "^4.0.0",
+    "ng2-charts": "^4.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
